syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message RequestRange {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message GeneratedResponse {
    int32 newValue = 1;
}

service RemoteService {
    rpc requestSequence(RequestRange) returns (stream GeneratedResponse);
}
